spacing issue for builder widget fix

--- a/src/styles/sass/components/input-box/mobileBuilder.module.scss
+++ b/src/styles/sass/components/input-box/mobileBuilder.module.scss
@@ -14,6 +14,9 @@
    justify-content: space-between;
    width: 100%;
 }
+.isMobileBuilder {
+  margin-right: 8px;
+}
 .switchWrapper {
   display: flex;
   align-items: center;
